# mip_algo_verify

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
experiments/: pep_experiment.py  run_FISTA_experiment.sh  run_ISTA_experiment.sh  run_ISTA_scratch_experiment.sh  run_LP_experiment.sh  run_MPC_experiment.sh  run_NNQP_experiment.sh  run_experiment.py  run_pep_experiment.sh
experiments/FISTA/: FISTA.py  FISTA_pep.py
experiments/ISTA/: FISTA_hydra.py  ISTA.py  ISTA_hydra.py  ISTA_incremental.py  ISTA_pep.py  ISTA_scratch_incremental.py
experiments/LP/: LP.py  LP_incremental.py  LP_pep.py  LP_rel_incremental.py  LP_satlin.py  mincost_flow.py  random_LP_class.py  small_LP_plot.py
experiments/Lasso/: FISTA_incremental.py  ISTA_incremental.py  ISTA_verifier.py
experiments/MPC/: MPC.py  MPC_nonfixedpt.py  MPC_noxinit.py  MPC_pep.py  quadcopter.py  quadcopter_compact.py
experiments/NNQP/: NNQP.py  NNQP_plot_simple.py  NNQP_vec.py
experiments/Portfolio/: PortfolioL1.py  (+1 more)
mipalgover/: __init__.py  dict_utils.py  linexpr.py  linexprstack.py  mat_utils.py  point.py  vector.py  verifier.py
tests/: test_LP_pdhg.py  test_douglas_rachford.py  test_frank_wolfe.py  test_frank_wolfe_simple.py  test_ista.py  test_linexpr.py  test_mincost_flow.py  test_partial_relu.py  test_point.py  test_portfolio.py  test_proximal_point.py  test_sample_maximum.py  test_sample_maximum_proximal.py  test_sanity.py  test_satlin.py  test_vec_LUhat.py  test_verifier.py  test_verifier_ista.py
tutorials/: FW.ipynb  NNLS.ipynb  testing_FW.py  testing_Proximal
(+29 files in other folders)
