[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mip_perf_verify"
description = "Scalable algorithm certification for first-order methods via MIP"
readme = "README.md"
license = { text = "Apache 2.0" }
dynamic = ["version"]
authors = [
       { name = "Vinit Ranjan", email = "vranjan@princeton.edu" },
       { name = "Bartolomeo Stellato", email = "bstellato@princeton.edu" },
]
dependencies = ["cvxpy@git+https://github.com/cvxpy/cvxpy.git#egg=209660c",  # cvxpy numpy 2.0 fix ,
                "jax"]

[project.optional-dependencies]
dev = [
       "pytest",
       "pre-commit",
       "ruff",
       "ruff-lsp",
       "matplotlib",
       "ipdb",
       "hydra-core",
       "pandas"
]

# Hatch environment that installs
# "dev" optional dependencies
[tool.hatch.envs.dev]
features = ["dev"]

# Get version from git
[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["build", "docs", "*__init__.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]

# Allow git direct references
[tool.hatch.metadata]
allow-direct-references = true
